--- a/Laba2/HTML_02.html
+++ b/Laba2/HTML_02.html
@@ -2,7 +2,9 @@
     <script src="Script.js">                  
     </script>
     <head>
-        <input type="submit" name="Butt" value="След.Сорт." onclick="FUCKYOUBITCH()">
+        <form>
+                <input type="submit" value="След.Сорт." onclick=document.write(ShowSorts())>
+        </form>
     </head>
     <body>
         
