--- a/Laba2/HTML_02.html
+++ b/Laba2/HTML_02.html
@@ -1,12 +1,49 @@
 <html>
-    <script src="Script.js">                  
+    <script>
+        var mas= new Array(5);
+        mas[0]="Москва";
+        mas[1]="Волгоград";
+        mas[2]="Ярославль";
+        mas[3]="Серпухов";
+        mas[4]="Подольск";
+        var counter=0;
+        function fu(a)
+        {
+            var d = document.createElement("div");
+            switch(a)
+            {
+                case 0:
+                    counter++;
+                    d.textContent = mas;
+                    return d;
+                case 1:
+                    counter++;
+                    d.textContent = mas.sort();
+                    return d;
+                case 2:
+                    counter++;
+                    d.textContent = mas.sort().reverse();
+                    return d;
+                case 3:
+                    counter++;
+                    d.textContent = mas.sort(SortLength);
+                    return d;
+                default:
+                    break;
+            }
+        }
+        function SortLength(a,b)
+        {
+            if(a.length < b.length) return -1;
+            else if(a.length>b.length) return 1;
+            else if(a.length==b.length) return 0;
+        }
     </script>
     <head>
-        <form>
-                <input type="submit" value="След.Сорт." onclick=document.write(ShowSorts())>
-        </form>
     </head>
     <body>
-        
+        <div>
+            <input type="button" value="Sort" onclick=document.body.appendChild(fu(counter))>
+        </div>
     </body>
 </html>
