--- a/Laba4/HTML_lab4.html
+++ b/Laba4/HTML_lab4.html
@@ -2,7 +2,7 @@
     <script>
         function Summ()
         {
-            var answer = parseInt(document.Form1.firstTXT.value) + parseInt(document.Form1.secondTXT.value);
+            var answer = (parseInt(document.Form1.firstTXT.value) * parseInt(document.Form1.secondTXT.value)) * 0.5;
             alert(answer);
         }
     </script>
